gradient_reps/src/comp_HCP_gradients/logs/group_grads_72115.err
Traceback (most recent call last):
  File "/scratch/tyoeasley/brain_representations/gradient_reps/src/comp_HCP_gradients/compute_group_gradients.py", line 9, in <module>
    import compute_subj_gradients as cgrad
  File "/mnt/beegfs/scratch/tyoeasley/brain_representations/gradient_reps/src/comp_HCP_gradients/compute_subj_gradients.py", line 267
    if __name__=="__main__":
    ^
IndentationError: expected an indented block after function definition on line 260
